--- a/emded.html
+++ b/emded.html
@@ -1,10 +1,13 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
-    <title>Global Map</title>
-    <style>html,body,#root{height:100%;margin:0}</style>
+    <title>Global Expansion Map</title>
+    <style>
+      html, body, #root { height: 100%; margin: 0; }
+      #root { display: flex; }
+    </style>
   </head>
   <body>
     <div id="root"></div>
@@ -13,18 +16,19 @@
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/global-expansion-widget@0.0.1/dist/global-expansion-map.umd.js"></script>
     <script>
-      (async function () {
-        const u = new URL(location.href);
-        const cfgUrl = u.searchParams.get('config');
-        if (!cfgUrl) { document.body.innerHTML = 'Missing ?config=<public JSON URL>'; return; }
+      (async () => {
+        const params = new URL(location.href).searchParams;
+        const raw = params.get('config');
+        if (!raw) { document.body.innerHTML = 'Missing ?config=<public JSON URL>'; return; }
+        const cfgUrl = raw.includes('%') ? decodeURIComponent(raw) : raw;
 
         try {
-          const cfg = await fetch(cfgUrl, { cache: 'no-store' }).then(r => {
-            if (!r.ok) throw new Error('Config not found: ' + r.status);
-            return r.json();
-          });
+          const res = await fetch(cfgUrl + (cfgUrl.includes('?') ? '&' : '?') + 't=' + Date.now());
+          if (!res.ok) throw new Error('Config not found: ' + res.status);
+          const cfg = await res.json();
 
-          const Comp = (window.GlobalExpansionMap && window.GlobalExpansionMap.GlobalExpansionMap);
+          const lib = window.GlobalExpansionMap;
+          const Comp = lib && (lib.GlobalExpansionMap || lib.default || lib);
           if (!Comp) throw new Error('Widget not loaded');
 
           const root = ReactDOM.createRoot(document.getElementById('root'));
@@ -33,7 +37,8 @@
             offices: Array.isArray(cfg.offices) ? cfg.offices : []
           }));
         } catch (e) {
-          document.body.innerHTML = 'Error: ' + e.message;
+          document.body.innerHTML = 'Error: ' + e.message + '<br/>URL: ' + cfgUrl;
+          console.error(e);
         }
       })();
     </script>
