--- a/emded.html
+++ b/emded.html
@@ -4,10 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <title>Global Expansion Map</title>
-    <style>
-      html, body, #root { height: 100%; margin: 0; }
-      #root { display: flex; }
-    </style>
+    <style>html,body,#root{height:100%;margin:0}#root{display:flex}</style>
   </head>
   <body>
     <div id="root"></div>
@@ -16,28 +13,33 @@
     <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
 
-    <!-- Widget UMD (use the version you published, e.g. 0.0.2) -->
+    <!-- Fix 'process is not defined' in some UMD deps -->
+    <script>window.process = { env: { NODE_ENV: 'production' } };</script>
+
+    <!-- Widget UMD (pin to your published version) -->
     <script src="https://unpkg.com/global-expansion-widget@0.0.2/dist/global-expansion-map.umd.js"></script>
 
     <script>
       (async () => {
         const params = new URL(location.href).searchParams;
         const raw = params.get('config');
-        if (!raw) {
-          document.body.innerHTML = 'Missing ?config=<public JSON URL>';
-          return;
-        }
-        const cfgUrl = raw.includes('%') ? decodeURIComponent(raw) : raw;
+        if (!raw) { document.body.innerHTML = 'Missing ?config=<public JSON URL>'; return; }
+
+        let cfgUrl = raw;
+        try { cfgUrl = decodeURIComponent(raw); } catch (_) {}
 
         try {
-          // Fetch config with cache-bust
           const res = await fetch(cfgUrl + (cfgUrl.includes('?') ? '&' : '?') + 't=' + Date.now());
           if (!res.ok) throw new Error('Config not found: ' + res.status);
           const cfg = await res.json();
 
-          // UMD default export is the component (window.GlobalExpansionMap)
-          const Comp = window.GlobalExpansionMap;
-          if (!Comp) throw new Error('Widget not loaded');
+          // Safely resolve component from UMD global
+          const rootExport = window.GlobalExpansionMap;
+          const Comp = typeof rootExport === 'function'
+            ? rootExport
+            : (rootExport && (rootExport.default || rootExport.GlobalExpansionMap));
+
+          if (typeof Comp !== 'function') throw new Error('Widget not loaded');
 
           const root = ReactDOM.createRoot(document.getElementById('root'));
           root.render(React.createElement(Comp, {
