--- a/emded.html
+++ b/emded.html
@@ -9,48 +9,44 @@
   <body>
     <div id="root"></div>
 
-    <!-- React UMD -->
-    <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+    <!-- React UMD (match the library's peer range) -->
+    <script src="https://unpkg.com/react@19/umd/react.production.min.js"></script>
+    <script src="https://unpkg.com/react-dom@19/umd/react-dom.production.min.js"></script>
 
-    <!-- Fix 'process is not defined' in some UMD deps -->
-    <script>window.process = { env: { NODE_ENV: 'production' } };</script>
+    <!-- Shim for deps that expect process/global -->
+    <script>window.process={env:{NODE_ENV:'production'}};window.global=window;</script>
 
-    <!-- Widget UMD (pin to your published version) -->
-    <script src="https://unpkg.com/global-expansion-widget@0.0.2/dist/global-expansion-map.umd.js"></script>
+    <!-- Widget (pin to your latest published version) -->
+    <script src="https://unpkg.com/global-expansion-widget@0.0.2/dist/global-expansion-map.umd.js?v=<?=Date.now()?>"></script>
 
     <script>
       (async () => {
-        const params = new URL(location.href).searchParams;
-        const raw = params.get('config');
+        const raw = new URL(location.href).searchParams.get('config');
         if (!raw) { document.body.innerHTML = 'Missing ?config=<public JSON URL>'; return; }
+        let cfgUrl = raw; try { cfgUrl = decodeURIComponent(raw); } catch (_) {}
 
-        let cfgUrl = raw;
-        try { cfgUrl = decodeURIComponent(raw); } catch (_) {}
+        const res = await fetch(cfgUrl + (cfgUrl.includes('?')?'&':'?') + 't=' + Date.now());
+        if (!res.ok) throw new Error('Config not found: ' + res.status);
+        const cfg = await res.json();
 
-        try {
-          const res = await fetch(cfgUrl + (cfgUrl.includes('?') ? '&' : '?') + 't=' + Date.now());
-          if (!res.ok) throw new Error('Config not found: ' + res.status);
-          const cfg = await res.json();
+        // Resolve the component from the UMD global robustly
+        const lib = window.GlobalExpansionMap;
+        const Comp =
+          (typeof lib === 'function' && lib) ||
+          (lib && typeof lib.default === 'function' && lib.default) ||
+          (lib && typeof lib.GlobalExpansionMap === 'function' && lib.GlobalExpansionMap);
 
-          // Safely resolve component from UMD global
-          const rootExport = window.GlobalExpansionMap;
-          const Comp = typeof rootExport === 'function'
-            ? rootExport
-            : (rootExport && (rootExport.default || rootExport.GlobalExpansionMap));
+        if (typeof Comp !== 'function') throw new Error('Widget not loaded');
 
-          if (typeof Comp !== 'function') throw new Error('Widget not loaded');
-
-          const root = ReactDOM.createRoot(document.getElementById('root'));
-          root.render(React.createElement(Comp, {
-            logoUrl: cfg.logoUrl,
-            offices: Array.isArray(cfg.offices) ? cfg.offices : []
-          }));
-        } catch (e) {
-          document.body.innerHTML = 'Error: ' + e.message + '<br/>URL: ' + cfgUrl;
-          console.error(e);
-        }
-      })();
+        const root = ReactDOM.createRoot(document.getElementById('root'));
+        root.render(React.createElement(Comp, {
+          logoUrl: cfg.logoUrl,
+          offices: Array.isArray(cfg.offices) ? cfg.offices : []
+        }));
+      })().catch(e => {
+        document.body.innerHTML = 'Error: ' + e.message;
+        console.error(e);
+      });
     </script>
   </body>
 </html>
