--- a/emded.html
+++ b/emded.html
@@ -9,29 +9,32 @@
   <body>
     <div id="root"></div>
 
-    <script src="https://unpkg.com/react@19/umd/react.production.min.js"></script>
-    <script src="https://unpkg.com/react-dom@19/umd/react-dom.production.min.js"></script>
-    <script>window.process={env:{NODE_ENV:'production'}};window.global=window;</script>
-    <script src="https://unpkg.com/global-expansion-widget@0.0.2/dist/global-expansion-map.umd.js"></script>
+    <script type="module">
+      // React from CDN
+      import React from 'https://esm.sh/react@19';
+      import { createRoot } from 'https://esm.sh/react-dom@19/client';
+      // Widget as ES module from npm via esm.sh (bundled, with react externals)
+      import GlobalExpansionMap from 'https://esm.sh/global-expansion-widget@0.0.2?bundle&external=react,react-dom';
 
-    <script>
-      (async () => {
-        const raw = new URL(location.href).searchParams.get('config');
-        if (!raw) { document.body.innerHTML = 'Missing ?config=<public JSON URL>'; return; }
+      // Tiny shim for libs that read NODE_ENV
+      window.process = { env: { NODE_ENV: 'production' } };
+
+      const params = new URL(location.href).searchParams;
+      const raw = params.get('config');
+      if (!raw) {
+        document.body.textContent = 'Missing ?config=<public JSON URL>';
+      } else {
         let cfgUrl = raw; try { cfgUrl = decodeURIComponent(raw); } catch {}
-        const res = await fetch(cfgUrl + (cfgUrl.includes('?')?'&':'?')+'t='+Date.now());
+        const res = await fetch(cfgUrl + (cfgUrl.includes('?')?'&':'?') + 't=' + Date.now());
         if (!res.ok) throw new Error('Config not found: ' + res.status);
         const cfg = await res.json();
 
-        const lib = window.GlobalExpansionMap;
-        const Comp = (typeof lib === 'function' && lib) ||
-                     (lib && typeof lib.default === 'function' && lib.default) ||
-                     (lib && typeof lib.GlobalExpansionMap === 'function' && lib.GlobalExpansionMap);
-        if (typeof Comp !== 'function') throw new Error('Widget not loaded');
-
-        const root = ReactDOM.createRoot(document.getElementById('root'));
-        root.render(React.createElement(Comp, { logoUrl: cfg.logoUrl, offices: Array.isArray(cfg.offices)?cfg.offices:[] }));
-      })().catch(e => { document.body.innerHTML = 'Error: ' + e.message; console.error(e); });
+        const root = createRoot(document.getElementById('root'));
+        root.render(React.createElement(GlobalExpansionMap, {
+          logoUrl: cfg.logoUrl,
+          offices: Array.isArray(cfg.offices) ? cfg.offices : []
+        }));
+      }
     </script>
   </body>
 </html>
