--- a/emded.html
+++ b/emded.html
@@ -12,44 +12,38 @@
   <body>
     <div id="root">Loading…</div>
 
-    <!-- React UMD (peer) -->
-    <script src="https://unpkg.com/react@19/umd/react.production.min.js"></script>
-    <script src="https://unpkg.com/react-dom@19/umd/react-dom.production.min.js"></script>
+    <script type="module">
+      // Use React 18 for widest CDN compatibility
+      import React from 'https://esm.sh/react@18';
+      import { createRoot } from 'https://esm.sh/react-dom@18/client';
+      // Load the widget as ESM, resolving peers to React 18
+      import GlobalExpansionMap from 'https://esm.sh/global-expansion-widget@0.0.5?deps=react@18,react-dom@18';
 
-    <!-- Small shims some libs expect -->
-    <script>window.process={env:{NODE_ENV:'production'}};window.global=window;</script>
+      // Minimal shim
+      window.process = { env: { NODE_ENV: 'production' } };
 
-    <!-- Widget UMD (pinned to 0.0.5) -->
-    <script src="https://unpkg.com/global-expansion-widget@0.0.5/dist/global-expansion-map.umd.js?v=0.0.5"></script>
-
-    <script>
-      (async () => {
-        const params = new URL(location.href).searchParams;
-        const raw = params.get('config');
+      async function main() {
+        const raw = new URL(location.href).searchParams.get('config');
         if (!raw) { document.getElementById('root').textContent = 'Missing ?config=<public JSON URL>'; return; }
 
         let cfgUrl = raw;
-        try { cfgUrl = decodeURIComponent(raw); } catch (_) {}
+        try { cfgUrl = decodeURIComponent(raw); } catch {}
 
-        try {
-          const res = await fetch(cfgUrl + (cfgUrl.includes('?') ? '&' : '?') + 't=' + Date.now());
-          if (!res.ok) throw new Error('Config not found: ' + res.status);
-          const cfg = await res.json();
+        const res = await fetch(cfgUrl + (cfgUrl.includes('?') ? '&' : '?') + 't=' + Date.now());
+        if (!res.ok) throw new Error('Config not found: ' + res.status);
+        const cfg = await res.json();
 
-          // UMD default export is assigned to window.GlobalExpansionMap
-          const Comp = window.GlobalExpansionMap;
-          if (typeof Comp !== 'function') throw new Error('Widget not loaded');
+        const root = createRoot(document.getElementById('root'));
+        root.render(React.createElement(GlobalExpansionMap, {
+          logoUrl: cfg.logoUrl,
+          offices: Array.isArray(cfg.offices) ? cfg.offices : []
+        }));
+      }
 
-          const root = ReactDOM.createRoot(document.getElementById('root'));
-          root.render(React.createElement(Comp, {
-            logoUrl: cfg.logoUrl,
-            offices: Array.isArray(cfg.offices) ? cfg.offices : []
-          }));
-        } catch (e) {
-          document.getElementById('root').textContent = 'Error: ' + e.message + ' | URL: ' + cfgUrl;
-          console.error(e);
-        }
-      })();
+      main().catch(err => {
+        document.getElementById('root').textContent = 'Error: ' + err.message;
+        console.error(err);
+      });
     </script>
   </body>
 </html>
